nn/tests/snapshots/snapshot_tests__avg_pool2d_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 179
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    1,
    1,
    2,
    2
  ],
  "data": [
    2.5,
    2.5,
    2.5,
    2.5
  ]
}
