nn/tests/snapshots/snapshot_tests__conv2d_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 290
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    1,
    1,
    2,
    2
  ],
  "data": [
    6.0,
    8.0,
    12.0,
    14.0
  ]
}
