nn/tests/snapshots/snapshot_tests__elu_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 450
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    4
  ],
  "data": [
    -0.8646647334098816,
    -0.6321205496788025,
    0.0,
    1.0
  ]
}
