nn/tests/snapshots/snapshot_tests__gelu_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 106
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    3
  ],
  "data": [
    -0.15880799293518066,
    0.0,
    0.8411920070648193
  ]
}
