nn/tests/snapshots/snapshot_tests__layer_norm_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 360
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    2,
    3
  ],
  "data": [
    -1.2247356176376343,
    0.0,
    1.2247356176376343,
    -1.2247356176376343,
    0.0,
    1.2247356176376343
  ]
}
