nn/tests/snapshots/snapshot_tests__linear_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 212
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    1,
    2
  ],
  "data": [
    1.0,
    2.0
  ]
}
