nn/tests/snapshots/snapshot_tests__linear_with_bias.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 248
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    1,
    2
  ],
  "data": [
    5.5,
    12.5
  ]
}
