nn/tests/snapshots/snapshot_tests__relu_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 49
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    6
  ],
  "data": [
    0.0,
    0.0,
    0.0,
    1.0,
    2.0,
    3.0
  ]
}
